# 2Syn

./: .gitignore  CLAUDE.md  Cargo.toml  DEVLOG.md  Dockerfile.signaling  convert_h264.rs  dev.sh  measure.js  screenshot.js  test_capture  test_capture.rs  test_login.py  test_ping.py  test_ping2.py  test_signaling.py  test_signaling2.py  test_timeout.py  update_walkthrough.js
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: build-windows-adhoc.yml  release.yml
brain/9d6eeacf-b68a-4e90-9bfd-7f7cf38edb2a/scratch/: verify_license_limit.py
core/: Cargo.toml  test_cg.rs  test_scroll.rs  test_totp.rs  test_totp_gen.rs  test_unicode.rs  test_webrtc.rs  test_xcap.rs  test_xcap_cursor.rs
core/examples/: test_xcap.rs  video_capture_test.rs
core/src/: audio.rs  codec.rs  connection.rs  debug_log.rs  file_transfer.rs  idd.rs  input.rs  lib.rs  mft_encoder.rs  security.rs  test_stats.rs  test_vt.rs  video.rs  wol.rs
desktop/: append_viewport.py  check_errors.cjs  check_nesting.cjs  check_prod.cjs  dump_dom.cjs  fix_main_ts.py  index.html  package-lock.json  package.json  tmp_system_control.ts  tsconfig.json  update_html.py  update_locales.py  update_main_ts.py  user_js.js  vite.config.ts
desktop/public/: privacy.html
desktop/public/locales/: de.json  en.json  es.json  id.json  ja.json  ko.json  ms.json  ru.json  th.json  zh-CN.json  zh-TW.json
desktop/scratch/: fix_layout.py  fix_logs.py  update_missing_locales.py  update_permission_locales.py
desktop/src/: file_transfer.ts  help_i18n.ts  main.ts  style.css
desktop/src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.client.conf.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/icons-client/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  permissions.rs
docs/: generate_i18n_docs.py  ios27-debugging-journey.md  ios27-workaround.md  privacy.html  support.html
docs/de/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/en/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/es/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/id/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/ja/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/ko/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/ms/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/ru/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/th/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/zh-CN/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
docs/zh-TW/: privacy-policy.md  store-listing.md  terms-of-service.md  user-manual.md
scratch/: Cargo.toml
scratch/src/: main.rs
scripts/: build-android-apps.js  build-ios-client.js  bump-version.js  clean-dmg-mounts.sh  update_locales_device_book.py
signaling/: Cargo.toml
signaling/src/: main.rs
