[package]
name = "syn-core"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
webrtc = "0.10"
ring = "0.17"
keyring = "2.1"
totp-rs = { version = "5.5", features = ["qr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
lazy_static = "1.4"
libc = "0.2"
hex = "0.4"
base32 = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Graphics",
    "Win32_Graphics_Gdi"
] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 平台特定依賴
objc = "0.2"
cocoa = "0.24"
core-graphics = "0.23"
core-foundation = "0.9"
