[package]
name = "syn-desktop"
version = "2.1.0"
edition = "2021"

[lib]
name = "syn_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn-core = { path = "../../core" }
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.7", features = ["v4"] }
webrtc = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
