[package]
name = "syn-desktop"
version = "3.2.14"
edition = "2021"
default-run = "syn-desktop"

[lib]
name = "syn_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn-core = { path = "../../core" }
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.7", features = ["v4"] }
webrtc = "0.10"
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-autostart = "2"
arboard = { version = "3.4", default-features = false }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
